# aion-ainstein

./: .env.example  .gitignore  CLAUDE.md  GOLD_STANDARD_TEST_QUESTIONS.md  Makefile  RAG_Implementation_Audit.md  RAG_QUALITY_DIAGNOSTIC_PLAN.md  README.md  SECURITY.md  Skills_Framework_Implementation_ToDos.md  TECHNICAL_HANDOVER.md  catalog-info.yaml  dev-plan-review.md  docker-compose.yml  evaluation_results.json  pyproject.toml  requirements.txt  setup.sh  start_elysia.ps1  stop_elysia.ps1
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
ai-prompts/: compile-architecture-principles-EN.md  interact-with-open-archimate-file.md
config/: corpus_expectations.yaml  intent_prototypes.yaml  routing_policy.yaml  taxonomy.default.yaml
data/: index.md
data/do-artifacts/: index.md
data/esa-skosmos/: AAIO.config  AAIO.ttl  AAIO.yaml  ACER.config  ACER.ttl  ACER.yaml  ENTSOE-HEMRM.config  ENTSOE-HEMRM.ttl  ENTSOE-HEMRM.yaml  FOCP2025.config  FOCP2025.ttl  FOCP2025.yaml  IEC61968.config  IEC61968.ttl  IEC61968.yaml  IEC61970-301.config  IEC61970-301.ttl  IEC61970-301.yaml  IEC61970-600-DL.config  IEC61970-600-DL.ttl  IEC61970-600-DL.yaml  IEC61970-600-EQ.config  IEC61970-600-EQ.ttl  IEC61970-600-EQ.yaml  IEC61970-600-EQBD.config  IEC61970-600-EQBD.ttl  IEC61970-600-EQBD.yaml  IEC61970-600-GL.config  IEC61970-600-GL.ttl  IEC61970-600-GL.yaml  IEC61970-600-OP.config  IEC61970-600-OP.ttl  IEC61970-600-OP.yaml  IEC61970-600-SC.config  IEC61970-600-SC.ttl  IEC61970-600-SC.yaml  IEC61970-600-SSH.config  IEC61970-600-SSH.ttl  IEC61970-600-SSH.yaml  IEC61970-600-SV.config  (+36 more)
data/evaluation/: golden_queries.jsonl
docs/: AInstein_ARCHITECTURE_and_IMPLEMENTATION_SPECIFICATIONS.tex  AInstein_model_generation_and_viewer.pptx  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_2026-02-15.md  DEV-PLAN-orchestrator-planning-layer.md  ESA_DOCUMENT_TAXONOMY.md  FIX_PLAN_repeated_tool_calls_and_thinking_leak.md  MONKEY_PATCHES.md  README.md  SKILLS_FRAMEWORK_USER_MANUAL.md  SKILLS_UI_STATUS.md  SKILLS_UI_TODO.md  SKILLS_USER_GUIDE.md  STRUCTURED_RESPONSE.md  STRUCTURED_RESPONSE_DEEP_DIVE.md  STRUCTURED_RESPONSE_IMPLEMENTATION.md  backlog.md  skills_creation_example.md
extensions/: pixel-agents-1.0.2.vsix
proposals/: agent-reload-design.md  issue-registry.md  plugin-architecture-e2e-manual-test-cases.md  plugin-author-guide.md  plugin-migration-retrospective.md
rag-local-dev/: RAG_Evaluation_TestBed_Specification.md  README.md  config.yaml  docker-compose.yml  requirements.txt
scripts/: eval_rag_quality.py  inspect_sugiyama.py  manual_demo_pack.py  manual_demo_probes.py  migrate_doc_type.py  setup.ps1  setup.sh  smoke_probes.py  verify_doc_identity.py  verify_doc_pair.py  verify_three_checks.py
skills/: README.md  registry.yaml  skills-registry.yaml  thresholds.yaml
src/: __init__.py  approval_extractor.py  chat_ui.py  cli.py  config.py  doc_type_classifier.py  elysia_agents.py  intent_router.py  list_response_builder.py  llm_client.py  meta_route.py  observability.py  persona.py  response_gateway.py  response_schema.py
src/agents/: __init__.py  (+6 more)
test_results/: adversarial_v1_ollama_gpt-oss-20b_nomic-embed-text-v2-moe_20260214_141135.json  adversarial_v1_ollama_gpt-oss-20b_nomic-embed-text-v2-moe_20260214_221605.json  adversarial_v1_openai_gpt-5-mini_text-embedding-3-large_20260214_211513.json  adversarial_v1_openai_gpt-5-mini_text-embedding-3-small_20260214_140124.json  adversarial_v1_openai_gpt-5-mini_text-embedding-3-small_20260214_210818.json  adversarial_v1_openai_gpt-5.2_text-embedding-3-large_20260214_211457.json  adversarial_v1_openai_gpt-5.2_text-embedding-3-small_20260214_140029.json  adversarial_v1_openai_gpt-5.2_text-embedding-3-small_20260214_210803.json  gold_standard_v3_ollama_gpt-oss-20b_nomic-embed-text-v2-moe_20260214_220617.json  gold_standard_v3_openai_gpt-5-mini_text-embedding-3-large_20260214_211411.json  gold_standard_v3_openai_gpt-5-mini_text-embedding-3-small_20260214_210543.json  gold_standard_v3_openai_gpt-5.2_text-embedding-3-large_20260214_211322.json  gold_standard_v3_openai_gpt-5.2_text-embedding-3-small_20260214_210501.json  gold_standard_v4_openai_gpt-5.2_text-embedding-3-large_20260215_091109.json  rag_test_ollama_20260203_000307.json  rag_test_ollama_20260203_123126.json  rag_test_ollama_20260203_130858.json  rag_test_openai_20260203_001820.json  rag_test_openai_20260203_002241.json  rag_test_openai_20260203_085709.json  rag_test_openai_20260203_090607.json  rag_test_openai_20260203_121244.json  rag_test_openai_20260203_121656.json  rag_test_openai_20260203_142217.json  rag_test_v3_ollama_20260210_122028.json  rag_test_v3_ollama_20260210_180507.json  rag_test_v3_ollama_20260210_181549.json  rag_test_v3_ollama_20260210_222835.json  rag_test_v3_openai_20260210_182546.json  rag_test_v3_openai_20260210_184952.json  rag_test_v3_openai_20260210_223406.json  rag_test_v3_openai_20260210_224000.json
tests/: README.md  adr-0029-oauth-2-0-openid-connect-for-identification-authentic.archimate.xml  conftest.py  test_agent_mcp_injection.py  test_agents_and_skills.py  test_api_attribution.py  test_approval_extractor.py  test_architecture_agent.py  test_capture_event_pixel_parity.py  test_catalog_routing.py  test_chat_ui.py  test_collection_count_schema_safe.py  test_commit_overview_script.py  test_config_centralization.py  test_conversation_doc_refs.py  test_daily_smoke.py  test_dar_extraction.py  test_dct_pipeline.py  test_definitional_doc_type.py  test_direct_doc_response.py  test_doc_type_classifier.py  test_document_extract.py  test_e2e_chat_pipeline.py  test_e2e_uuid_pipeline.py  test_element_registry.py  test_elysia_model_wiring.py  test_embedding_classifier.py  test_embedding_prefixes.py  test_events.py  test_experiment_report_generation.py  test_fallback_guardrails.py  test_filters.py  test_followup_binding.py  test_full_doc_indexing.py  test_generation_dct.py  test_generation_html.py  test_generation_traceability.py  test_gold_routing_suite.py  test_golden_queries.py  test_groups.py  (+50 more)
(+406 files in other folders)
