[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esa-ainstein-artifacts"
version = "0.1.0"
description = "Multi-Agent RAG System for Energy System Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"

authors = [
    { name = "Aion Project Contributors" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Vector DB / RAG
    "weaviate-client>=4.19.3",
    "elysia-ai>=0.2.8",
    "dspy-ai>=3.1.3",
    # Document ingestion
    "python-docx>=1.2.0",
    "pypdf>=6.7.0",
    "pymupdf>=1.27.1",
    "markdown>=3.10.2",
    "python-frontmatter>=1.1.0",
    # LLM
    "openai>=2.21.0",
    "tiktoken>=0.12.0",
    # Async / IO
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    # CLI / UX
    "typer>=0.24.0",
    "rich>=13.7.0,<=14.0.0",
    "python-dotenv>=1.2.1",
    # Config / models
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    # Web UI
    "fastapi>=0.129.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
aion = "src.aion.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
environment = "venv312"
