[project]
name = "esa-ainstein-artifacts"
version = "0.1.0"
description = "Multi-Agent RAG System for Energy System Architecture"

readme = "README.md"
requires-python = ">=3.11,<3.14"

license = "Apache-2.0"
license-files = [
    "LICENSE"
]

authors = [
    { name = "Aion Project Contributors" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Vector DB / RAG
    "weaviate-client>=4.19.3",
    # Document ingestion
    "python-docx>=1.2.0",
    "pypdf>=6.9.1",
    "pymupdf>=1.27.1",
    "python-frontmatter>=1.1.0",
    # LLM / Agent
    "openai>=2.21.0",
    "pydantic-ai-slim[openai]>=0.2",
    # Async / IO
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    # CLI / UX
    "typer-slim==0.21.1",
    "python-dotenv>=1.2.1",
    # Config / models
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    # Web UI
    "fastapi>=0.129.0",
    "uvicorn>=0.34.0",
    # Observability
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=15.0",
    # pytest hard-requires pygments (pytest>=9 declares pygments>=2.7.2 and
    # _pytest._io.terminalwriter imports it UNCONDITIONALLY at module load).
    # It is DEV/TEST-ONLY (no src/ imports pygments; it is not in
    # [project.dependencies], so the "no visual deps in production" policy
    # is unaffected). Pinned to a CVE-safe floor (the ReDoS was in 2.19.x).
    # This replaces the previous, broken global override that force-excluded
    # pygments and made `uv sync --frozen && uv run pytest` dead-on-arrival.
    "pygments>=2.20.0",
    "black>=26.3.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
aion = "aion.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "unit: Pure-logic tests, no external services needed (<30s total)",
    "functional: End-to-end tests requiring Weaviate + Ollama (~3-4 min)",
    "ingestion: Ingestion integrity checks against live Weaviate",
    "generation: ArchiMate generation pipeline tests",
    "benchmark: Retrieval quality benchmarks and provider comparison",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.uv]
package = true
# NOTE: the previous override-dependencies force-excluded `pygments` via a
# never-true marker. pytest (dev group) hard-requires pygments and imports
# it unconditionally, so that override made the committed lock unable to
# run pytest from a clean `uv sync --frozen`. Removed; pygments is instead
# pinned CVE-safe in the dev group (test-only, not a production dep).
